--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 {
-    "name": "Milling Two",
+    "name": "Mill",
     "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
     "features": {
         "ghcr.io/ebaskoro/devcontainer-features/scala:1": {},
-        //"ghcr.io/devcontainers/features/java:1": {},
-        //"ghcr.io/mikaello/devcontainer-features/kotlinc:latest": {}
+        "ghcr.io/devcontainers/features/node:1": {},
+        "ghcr.io/NordcomInc/devcontainer-features/android-sdk:1": {}
     }
 }
